--- a/tu.hsuanling/lib/css/styleguide.css
+++ b/tu.hsuanling/lib/css/styleguide.css
@@ -5,19 +5,25 @@
 }
 
 :root {
-	--color-main-theme: #707F8C;
-	--color-second-theme: #C5D1D9;
-	--color-main-title: #41592F;
-	--color-second-title: #88A65B;
+	--color-neutral-light: #eee;
+	--color-neutral-medium: #999;
+	--color-neutral-dark: #555;
+
+	--color-black: #000;
+	--color-white: #fff;
 
 	--header-height:  3rem;
-	--spacing: 1.5rem;
+	--spacing: 1rem;
+
+
+	--font-serif: Georgia, "Times New Roman", serif;
+	--font-sans: Helvetica, Arial, sans-serif;
 }
 
 body {
 	margin: 0;
 	font-size: 100%;
-	font-family: Helvetica, Arial, sans-serif;
+	font-family: var(--font-sans);
 
 }
 
@@ -27,7 +33,7 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: Georgia, "Times New Roman", serif;
+	font-family: var(--font-serif);
 }
 
 a {
@@ -37,29 +43,15 @@ a {
 }
 
 a:hover {
-	color: white;
-}
-
-.logo{
-	font-size: 1.5em;
-	margin-top: 0;
-
-	color: white;
+	text-decoration: underline;
 }
 
 /* LAYOUT CLASSES */
 
-.site-width{
-	max-width: 1200px;
+.container{
+	max-width: 800px;
 	margin-right: auto;
 	margin-left: auto;
-}
-
-.discount-bar{
-	padding-top: 1em;
-	padding-bottom: 1em;
-	font-size: 0.7em;
-	text-align: center;
 }
 
 .display-flex { display: flex; }
@@ -69,8 +61,6 @@ a:hover {
 
 .flex-stretch {flex: 1 1 auto;}
 .flex-none {flex: none;}
-.flex-four-columns {flex: 0 0 25%}
-.flex-wrap { flex-wrap: wrap; }
 
 .flex-align-center {align-items: center;}
 .flex-justify-center {justify-content: center;}
@@ -85,13 +75,9 @@ a:hover {
 	padding-left: 0;
 }
 
-.nav li{
-	color: var(--color-second-theme);
-}
-
 .navbar{
-	background-color: var(--color-main-theme);
-	color: var(--colo-white);
+	background-color: var(--color-neutral-dark);
+	color: var(--color-white);
 	line-height: var(--header-height);
 }
 
@@ -102,112 +88,55 @@ a:hover {
 	}
 
 	.navbar a{
-		padding: 0 1em;
+		padding: 0 0.5em;
 	}
 
-.hero-image{
-	width: 100%;
+
+/* CARD COMPONENT */
+
+.card{
+	background-color: var(--color-white);
+	margin-top: 1em;
+	margin-bottom: 1em;
+	padding: 1em;
+
+	overflow: hidden;
+	position: relative;
+}
+
+	.card.soft{
+		border-radius: 0.5em;
+		box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+	}
+
+	.card.hard{
+		border-radius: 0.2em;
+		border: 2px solid var(--color-neutral-medium);
+	}
+
+	.card.dark{
+		background-color: var(--color-neutral-dark);
+		color: var(--color-neutral-light);
+	}
+
+	.card.medium{
+		background-color: var(--color-neutral-medium);
+	}
+
+	.card.flat{
+		padding: 0;
+	}
+
+
+.view-window{
 	height: 50vh;
+	position: relative;
+	overflow: hidden;
 	background-size: cover;
 	background-position: center;
 	background-attachment: fixed;
+
 }
-
-
-.product-image-frame{
-	width: 20vw;
-	height: 50vh;
-	background-position: center;
-	overflow: hidden;
-}
-
-.product-image{
-	transition: all 1s;
-}
-
-.product-image:hover{
-	transform: scale(1.2);
-	transition-timing-function: ease-out;
-}
-
-.product-box{
-	padding-bottom: 3em;
-}
-
-.product-name{
-	padding-top: 1em;
-	padding-bottom: 1em;
-	font-size: 1em;
-}
-
-.product-size{
-	padding-bottom: 0.5em;
-	font-size: 0.8em;
-}
-
-.product-price{
-	font-size: 0.8em;
-}
-
-.subscribe-bar{
-	background-color: var(--color-second-theme);
-	width: 800px;
-	height: 50px;
-
-	margin: 0 auto;
-	border-radius: 20px;
-}
-
-footer{
-	background-color: black;
-	position: absolute;
-	left: 0;
-	width: 100%;
-	height: 50vh;
-}
-
-.footer-text{
-	color: white;
-}
-
-.about-us{
-	width: 20vw;
-	font-size: 0.8em;
-	line-height: var(--spacing);
-}
-
-.footer-logo{
-	padding-top: 1em;
-}
-
-.footer-subtitle{
-	font-size: 1em;
-	line-height: var(--spacing);
-	padding-bottom: 0.5em;
-}
-
-.footer-columns{
-	width: 25vw;
-	padding-top: 3em;
-	
-	position: relative;
-	left: 16em;
-}
-
-.footer-contents{
-	font-size: 0.8em;
-	line-height: var(--spacing);
-}
-
-.copyright{
-	font-size: 0.7em;
-	text-align: center;
-	color: white;
-	padding-top: 3em;
-}
-
-
-
 
 
 
