--- a/Kardan_Kosar/lib/css/styleguide.css
+++ b/Kardan_Kosar/lib/css/styleguide.css
@@ -10,9 +10,10 @@
     --color-neutral-medium: #999;
     --color-neutral-dark: #555;
 
-    --color-primary-light: #cdd6cf;
-    --color-primary-medium: #a1aca1;
-    --color-primary-dark: #818c7f;
+    /* Blue Tint */
+    --color-primary-light: #AED6F1;
+    --color-primary-medium: #3498DB;
+    --color-primary-dark: #21618C;
 
     --color-black:  #000;
     --color-white:  #fff;
@@ -69,6 +70,14 @@ a:hover {
 .flex-justify-center {justify-content: center;}
 
 
+/* Small Classes */
+
+.media-image {
+    max-width: 100%;
+    vertical-align: text-bottom;
+}
+
+
 /* COMPONENT CLASSES */
 
 
@@ -77,6 +86,78 @@ a:hover {
     margin-top: 0;
     margin-bottom: 0;
     padding-left: 0;
+}
+
+    .nav a {
+        display: block;
+        padding: 0.2em 0.4em;
+    }
+    .nav a:hover {
+        background-color: var(--color-primary-medium);
+        color: var(--color-white);
+        text-decoration: none;
+    }
+    .nav .active a{
+        background-color: var(--color-primary-light);
+        color: inherit;
+    }
+
+.nav-matrial ul,
+.nav-crumbs ul,
+.nav-pills ul,
+.nav-stretch ul,
+.nav-flex ul {
+    display: flex;
+}
+.nav-matrial li,
+.nav-stretch li {
+    flex: 1 1 auto;
+    text-align: center;
+}
+
+.nav-pills a {
+    border-radius: 2em;
+    padding: 0.5em 1em;
+}
+
+.nav-crumbs li:not(:first-child)::before {
+    content: "/";
+}
+.nav-crumbs a {
+    display: inline-block;
+}
+.nav-crumbs .active a,
+.nav-crumbs a:hover {
+    background-color: transparent;
+    color: inherit;
+    text-decoration: underline;
+}
+
+.nav-matrial a{
+    padding: 0.5em 1em;
+    position: relative;
+}
+.nav-matrial .active a{
+    background-color: transparent;
+    color: inherit;
+}
+.nav-matrial a:hover{
+    background-color: var(--color-neutral-light);
+    color: inherit;   
+}
+.nav-matrial a::after{
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 0;
+    background-color: var(--color-primary-medium);
+    color: inherit;
+    transition: all 0.3s ease-in-out;
+}
+.nav-matrial .active a::after{
+    height: 4px;
 }
 
 .navbar {
@@ -144,3 +225,127 @@ a:hover {
     .view-window.half{
         height: 50vh;
     }
+
+
+
+/* Table */
+
+.table{
+    width: 100%;
+    border-collapse: collapse;
+}
+.table th,
+.table td {
+    text-align: left;
+    padding: 0.2em 0.5em;
+}
+
+
+.table.striped tbody tr:nth-child(odd){
+    background-color: var(--color-neutral-light);
+}
+
+.table.lined.all th:not(:first-child),
+.table.lined.all td:not(:first-child),
+.table.lined.vertical th:not(:first-child),
+.table.lined.vertical td:not(:first-child) {
+    border-left: 1px solid var(--color-neutral-medium );
+}
+
+.table.lined.all tbody tr ,
+.table.lined.horizontal tbody tr {
+    border-top: 1px solid var(--color-neutral-medium );
+}
+
+.table.lined.all,
+.table.lined.border {
+    border: 1px solid var(--color-neutral-medium );
+}
+
+
+
+/* Figure */
+
+.figure {
+    margin: 0;
+    background-color: var(--color-white);
+}
+.figure img {
+    width: 100%;
+    vertical-align: text-bottom;
+}
+.figure figcaption {
+    padding: 1em;
+}
+
+
+.figure.product {
+    border-radius: 0.5em;
+    box-shadow: 0 2px 5px rgba( 0, 0, 0, 0.1);
+    overflow: hidden;
+}
+
+.product-overlay{
+    position: relative;
+    overflow: hidden;
+}
+.product-overlay figcaption {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    opacity: 0;
+    transition: all 0.3s ease-in-out;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.product-overlay:hover figcaption  {
+    opacity: 1;
+}
+
+.product-overlay .caption-body{
+    background-color: white;
+    border-radius: 0.5em;
+    padding: 1em;
+    transform: translateY(2em);
+    transition: all 0.3s ease-in-out;
+}
+
+.product-overlay:hover .caption-body{
+ transform: translateY(0em);   
+}
+
+.product-overlay img{
+
+    transform: scale(1.1);
+    transition: all 0.3s ease-in-out;
+}
+
+.product-overlay:hover img{
+ transform: scale(1.4);   
+}
+
+/* touch devices */
+@media (max-width: 600px){
+   
+    .product-overlay figcaption {
+        position: relative;
+        display: block;
+        top: initial;
+        left: initial;
+        width: 100%;
+        height: initial;
+        opacity: 1;
+        background-color: initial;
+    }
+    .product-overlay .caption-body {
+        transform: none;
+        padding: 0;
+    }
+
+
+}
