--- a/christiansen.nikoline/lib/css/styleguide.css
+++ b/christiansen.nikoline/lib/css/styleguide.css
@@ -6,9 +6,13 @@
 }
 
 :root {
-	--color-neutral-light: #eee;
-	--color-neutral-medium: #999;
-	--color-neutral-dark: #555;
+	--color-neutral-light: #cacdc5;
+	--color-neutral-medium: #919c8c;
+	--color-neutral-dark: #283618;
+
+	--color-main-light: #919c8c;
+	--color-main-medium: #DDA15E;
+	--color-main-dark: #BC6C25;
 
 	--color-black: #000;
 	--color-white: #fff;	
@@ -33,16 +37,24 @@ h4,
 h5,
 h6 {
 	font-family:var(--font-serif);
+	color: var(--color-neutral-dark);
 }
 
 a {
 	color: inherit;
 	font-weight: bold;
 	text-decoration: none;
+	color: var(--color-neutral-dark);
 }
 
 a:hover {
-	text-decoration: underline;
+	background-color: var(--color-main-medium);
+	color: var(--color-white);
+	text-decoration: none;
+}
+
+p {
+	color: var(--color-neutral-dark);
 }
 
 
@@ -70,6 +82,12 @@ a:hover {
 .flex-justify { justify-content: center; }
 
 
+/* SMALL CLASS */
+
+.media-image {
+	max-width: 100%;
+	vertical-align: text-bottom;
+}
 
 /* COMPONENT CLASSES */
 
@@ -80,11 +98,96 @@ a:hover {
 	padding-left: 0;
 }
 
-.navbar {
-	background:var(--color-neutral-dark);
+	.nav a {
+		display: block;
+		padding: 0.2em 0.5em;
+	}
+
+	.nav a:hover {
+		background-color: var(--color-main-medium);
+		color: var(--color-white);
+		text-decoration: none;
+	}
+
+	.nav .active a{
+		background-color: var(--color-neutral-light);
+		color: var(--color-neutral-dark);
+		text-decoration: none;
+	}
+
+
+	.nav-material ul,
+	.nav-crumbs ul,
+	.nav-pills ul,
+	.nav-flex ul,
+	.nav-stretch ul {
+	display: flex;
+}
+
+	.nav-material li,
+	.nav-stretch li {
+		flex: 1 1 auto;
+		text-align: center;
+	}
+
+	.nav-pills a {
+		border-radius: 2em;
+		padding: 0.5em 1em;
+	}
+
+	.nav-crumbs a {
+		display: inline-block;
+	}
+
+	.nav-crumbs .active a,
+	.nav-crumbs a:hover {
+		background-color: transparent;
+		color: inherit;
+		text-decoration: underline;
+	}
+
+	.nav-crumbs li:not(:first-child)::before {
+		content: '/';
+	}
+
+
+	.nav-material a {
+		padding: 0.5em 1em;
+		position: relative;
+	}
+
+	.nav-material .active a {
+		background-color: transparent;
+		color: inherit;
+	}
+
+	.nav-material a:hover {
+		background-color: var(--color-neutral-light);
+		color: inherit;
+	}
+
+	.nav-material a::after {
+		content: '';
+		position: absolute;
+		bottom: 0;
+		left: 0;
+		width: 100%;
+		height: 0;
+		background-color: var(--color-main-medium);
+		transition: all 0.3s;
+	}
+
+	.nav-material .active a::after {
+		height: 4px;
+	}
+
+
+
+.navbar { 
+	background:var(--color-neutral-medium);
 	color:var(--color-white);
 	line-height:var(--header-height);
-	position: fixed;
+	/*position: fixed;*/
 	z-index: 100;
 	width: 100%;
 }
@@ -129,10 +232,15 @@ a:hover {
 
 .card.medium {
 	background-color: var(--color-neutral-medium);
+	color: var(--color-neutral-dark);
 }
 
 .card.opacity {
 	width: 200px;
+}
+
+.card.flat {
+	padding: 0;
 }
 
 
@@ -169,4 +277,135 @@ article {
 	opacity: 0.8;
 }
 
+
+/* TABLES */
+.table {
+	width: 100%;
+	border-collapse: collapse;
+}
+
+.table th, 
+.table td {
+	text-align: left;
+	padding: 0.2em 0.5em;
+}
+
+.table.striped tbody tr:nth-child(odd) {
+	background-color: var(--color-main-medium);
+
+}
+
+.table.lined.all th:not(first-child), 
+.table.lined.all td:not(first-child),
+.table.lined.vertical th:not(first-child), 
+.table.lined.vertical td:not(first-child) {
+	border-left: 1px solid var(--color-neutral-medium);
+}
+
+.table.lined.all tbody tr,
+.table.lined.horizontal tbody tr {
+	border-top: 1px solid var(--color-neutral-medium);
+}
+
+.table.lined.all, 
+.table.lined.border {
+	border: 1px solid var(--color-neutral-medium);
+
+}
+
+/* FIGURE */
+.figure {
+	margin: 0;
+}
+
+.figure img {
+	width: 100%;
+/*	vertical-align: text-bottom;*/
+}
+
+.figure figcaption {
+	padding: 1em;
+	vertical-align: text-bottom;
+}
+
+
+/* ADD TO STORETHEME WHEN PROBLEM IS FIXED */
+
+.figure.product {
+	border-radius: 0.5em;
+	box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+/*	overflow: hidden; */
+}
+
+.product-overlay {
+	position: relative;
+	overflow: hidden; /* remove */
+}
+
+.product-overlay figcaption {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: rgba(0, 0, 0, 0.7);
+	opacity: 0;
+	transition: all 0.4s ease-in-out;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	flex-direction: column;
+	padding: 0;
+}
+
+.product-overlay:hover figcaption {
+	opacity: 1;
+}
+
+.product-overlay .caption-body {
+	background-color: white;
+	border-radius: 0.5em;
+	padding: 1em;
+	transform: translateY(2em);
+	transition: all 0.4 ease-in-out;
+}
+
+
+.product-overlay:hover .caption-body  {
+	transform: translateY(0);
+}
+
+.product-overlay img {
+	transform: scale(1,1);
+	transition: all 0.4 ease-in-out;
+}
+
+
+.product-overlay:hover img  {
+	transform: scale(1.4,1.4);
+}
+
+
+/* MY STYLEGUIDE */
+
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,400;0,600;1,400&display=swap');
+
+.styleguidebody {
+	background-color: #28361838;
+}
+
+.styleguidebody p {
+	font-family: 'Source Sans Pro', sans-serif;
+	font-weight: 200;
+}
+
+.styleguidebody a {
+	font-family: 'Source Sans Pro', sans-serif;
+	font-weight: 300;
+} 
+
+.styleguidebody h1, h2, h3, h4, h5, h6 {
+	font-family: 'Source Sans Pro', sans-serif;
+	font-weight: 800;
+}
 
