--- a/fu.zhen/lib/css/styleguide.css
+++ b/fu.zhen/lib/css/styleguide.css
@@ -6,17 +6,18 @@
 }
 
 :root {
-	--color--neutral-light: #eee;
-	--color--neutral-medium: #999;
-	--color--neutral-dark: #555;
-	--color--darkpink: #f26680;
-	--color--lightpink: #f2dedc;
-	--color--darkred: #590202;
+	--color-neutral-light: #eee;
+	--color-neutral-medium: #999;
+	--color-neutral-dark: #555;
+
+	--color-main-light: lightblue;
+	--color-main-medium: blue;
+	--color-main-dark: darkblue;
 
 	--color-black: #000;
 	--color-white: #fff;
 
-	--header-height: 5rem;
+	--header-height: 3rem;
 	--spacing: 1rem;
 
 
@@ -29,13 +30,10 @@ body {
 	margin: 0;
 	font-size: 100%;
 	font-family: var(--font-sans);
-	color: var(--color--darkred);
 }
 
 h1,
-h2,{
-	font-family: var(--font-serif);
-}
+h2,
 h3,
 h4,
 h5,
@@ -79,6 +77,20 @@ a:hover {
 
 
 
+
+
+/* Small Classes */
+
+.media-image {
+	max-width: 100%;
+	vertical-align: text-bottom;
+}
+
+
+
+
+
+
 /* COMPONENT CLASSES */
 
 .nav ul {
@@ -87,15 +99,91 @@ a:hover {
 	margin-bottom: 0;
 	padding-left: 0;
 }
+	.nav a {
+		display: block;
+		padding: 0.2em 0.5em;
+	}
+	.nav a:hover {
+		background-color: var(--color-main-medium);
+		color: var(--color-white);
+		text-decoration: none;
+	}
+	.nav .active a {
+		background-color: var(--color-main-light);
+		color: inherit;
+	}
+
+.nav-material ul,
+.nav-crumbs ul,
+.nav-pills ul,
+.nav-stretch ul,
+.nav-flex ul{
+	display: flex;
+}
+
+.nav-material li, 
+.nav-stretch li {
+	flex: 1 1 auto;
+	text-align: center;
+}
+
+.nav-pills a {
+	border-radius: 2em;
+	padding: 0.5em 1em;
+}
+
+
+.nav-crumbs a {
+	display: inline-block;
+}
+.nav-crumbs .active a,
+.nav-crumbs a:hover {
+	background-color: transparent;
+	color: inherit;
+	text-decoration: underline;
+}
+.nav-crumbs li:not(:first-child)::before {
+	content: '/';
+}
+
+
+.nav-material a {
+	padding: 0.5em 1em;
+	position: relative;
+}
+.nav-material .active a {
+	background-color: transparent;
+	color: inherit;
+}
+.nav-material a:hover {
+	background-color: var(--color-neutral-light);
+	color: inherit;
+}
+.nav-material a::after {
+	content: '';
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	width: 100%;
+	height: 0;
+	background-color: var(--color-main-medium);
+	transition: all 0.3s;
+}
+.nav-material .active a::after {
+	height: 4px;
+}
+
+
+
 
 
 .navbar {
-	background-color: var(--color--darkpink);
+	background-color: var(--color-neutral-dark);
 	color:  var(--color-white);
 	line-height: var(--header-height);
 }
 	.navbar h1 {
-		font-size: 3em;
+		font-size: 1em;
 		margin: 0;
 		font-family: var(--font-sans);
 	}
@@ -117,27 +205,24 @@ a:hover {
 	position: relative;
 }
 	.card.soft {
-		border-radius: 1em;
-		box-shadow: 0 0 10px rgba(0,0,0,0.3);
+		border-radius: 0.5em;
+		box-shadow: 0 0 10px rgba(0,0,0,0.1);
 	}
 	.card.hard {
-		border-radius: 1em;
-		border: 2px solid var(--color--neutral-medium);
+		border-radius: 0.2em;
+		border: 2px solid var(--color-neutral-medium);
 	}
 
 	.card.dark{
-		background-color: var(--color--neutral-dark);
-		color: var(--color--neutral-light);
+		background-color: var(--color-neutral-dark);
+		color: var(--color-neutral-light);
 	}
 	.card.medium {
-		background-color: var(--color--neutral-medium);
+		background-color: var(--color-neutral-medium);
 	}
 
 	.card.flat {
 		padding: 0;
-	}
-	.card.light {
-		background-color: var(--color--neutral-light);
 	}
 
 
@@ -155,13 +240,52 @@ a:hover {
 }
 
 
-footer{
-	padding: 15px 0 15px 0;
-	display: flex;
-	flex-direction: row;
-	justify-content: center;
-	font-size: 12px;
-	font-weight: lighter;
-	margin-top: 30px;
-	
+
+
+
+/* 	TABLES */
+.table{
+	width: 100%;
+	border-collapse: collapse;
+}
+.table th,
+.table td {
+	text-align: left;
+	padding: 0.2em 0.5em;
+}
+
+.table.striped tbody tr:nth-child(odd) {
+	background-color: var(--color-neutral-light);
+}
+
+.table.lined.all th:not(:first-child),
+.table.lined.all td:not(:first-child), 
+.table.lined.vertical th:not(:first-child),
+.table.lined.vertical td:not(:first-child) {
+	border-left: 1px solid var(--color-neutral-medium);
+}
+
+.table.lined.all tbody tr,
+.table.lined.all tbody tr {
+	border-top: 1px solid var(--color-neutral-medium);
+}
+
+.table.lined.all,
+.table.lined.border {
+	border: 1px solid var(--color-neutral-medium);
+}
+
+
+
+/* Figure */
+.figure {
+	margin: 0;
+	background-color: var(--color-white);
+}
+.figure img {
+	width: 100%;
+	vertical-align: text-bottom;
+}
+.figure figcaption {
+	padding: 1em;
 }
