--- a/chang.karen/styleguide/styleguide.css
+++ b/chang.karen/styleguide/styleguide.css
@@ -32,7 +32,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     color: var(--color-neutral-dark);
-    padding-bottom: 30px;
+    padding-bottom: 60px;
 }
 
 .container {
@@ -363,17 +363,26 @@ body {
     margin: 1em 0;
 }
 
-.form-input {
+.hotdog,
+.hotdog input,
+.form-button,
+.form-input,
+.form-item {
     display: inline-block;
     background-color: transparent;
     border-width: 0;
-    padding: 0.5em 0.5em;
+    padding: 0.3em 1em;
+    width: 100%;
     font:  inherit;
     -webkit-appearance: none;
     color: var(--color-neutral-dark);
-    width: 100%;
-    border-bottom: 1px solid var(--color-neutral-medium);
     outline: 0;
+}
+
+.form-input {
+    padding: 0.5em 0.5em;
+    color: var(--color-neutral-dark);
+    border-bottom: 1px solid var(--color-neutral-medium);
 }
 
 .form-input:focus {
@@ -388,12 +397,7 @@ body {
 }
 
 .form-button {
-    display: inline-block;
     background-color: var(--color-neutral-light);
-    border-width: 0;
-    padding: 0.3em 1em;
-    width: 100%;
-    font:  inherit;
     -webkit-appearance: none;
     color: var(--color-neutral-dark);
     outline: 0;
@@ -411,10 +415,26 @@ body {
     background-color: var(--color-main-light);
 }
 
+.hotdog {
+    background-color: var(--color-neutral-light);
+    border-radius: 2em;
+    padding: 0.5em 1.5em;
+    display: flex;
+}
 
+.hotdog input {
+    padding: 0;
+}
 
+.hotdog.dark {
+    background-color: var(--color-neutral-dark);
+    color: #fff;
+}
 
-
+.hotdog.light {
+    background-color: var(--color-neutral-light);
+    color: #000;
+}
 
 
 
