--- a/chang.karen/styleguide/styleguide.css
+++ b/chang.karen/styleguide/styleguide.css
@@ -57,6 +57,12 @@ body {
 .flex-justify-center {justify-content: center;}
 
 
+/* SMALL */
+
+.hidden {
+    display: none;
+}
+
 
  /* COMPONENT */
 
@@ -356,13 +362,15 @@ body {
 /*  FORMS  */
 
 #form-card {
-    padding-bottom: 30px;
+    padding-bottom: 10px;
 }
 
 .form-control {
     margin: 1em 0;
 }
 
+
+.form-select>select,
 .hotdog,
 .hotdog input,
 .form-button,
@@ -422,6 +430,14 @@ body {
     display: flex;
 }
 
+.hotdog span {
+    font-size: 1.1rem;
+    font-family: arial, sans-serif;
+    margin-right: 5px;
+    transform: translateY(2px);
+    margin-left: 0;
+}
+
 .hotdog input {
     padding: 0;
 }
@@ -437,11 +453,71 @@ body {
 }
 
 
+#card-select {
+    padding-top: 0;
+    padding-bottom: 0;
+}
 
+.form-select>select {
+    padding: 0.5em 1em;
+    background-color: var(--color-neutral-light);
+    border-radius: 0.3em;
+    cursor: pointer;
+}
 
+.form-select {
+    position: relative;
+}
 
+.form-select::after {
+    content:'▾';
+    font-family: arial, sans-serif;
+    font-size: 0.8em;
+    position: absolute;
+    top: 50%;
+    right: 0.3em;
+    transform: translateY(-50%);
+    pointer-events: none;
+    color: var(--color-neutral-medium);
+}
 
+.favorite input:checked + label {
+    color: red;
+    transform: scale(1.5, 1.5);
+}
+.favorite label {
+    transition: all 0.3s;
+    display: inline-block;
+    transform: scale(1,1);
+    color: var(--color-neutral-medium);
+}
 
+/* TOGGLE */
+
+.toggle label {
+    font-size: 1.3em;
+    display: inline-block;
+    width: 2em;
+    height: 1em;
+    border: 0.1em solid var(--color-neutral-medium);
+    border-radius: 1em;
+    position: relative;
+}
+
+.toggle label::after {
+    content: '';
+    display: inline-block;
+    width: 0.8em;
+    height: 0.8em;
+    border-radius: 1em;
+    position: absolute;
+    background-color: var(--color-neutral-light);
+    transition: all 0.3s;
+}
+
+.toggle input:checked + label::after {
+    transform: translateX(1em);
+}
 
 
 
