--- a/chang.karen/styleguide/styleguide.css
+++ b/chang.karen/styleguide/styleguide.css
@@ -239,6 +239,20 @@ body {
         box-shadow: 0;
     }
 
+/*  GRID  */
+
+.rectangle-1 {
+    display: inline-block;
+    font-size: 1em;
+    background-color: var(--color-neutral-light);
+    text-align: center;
+    padding: 0.2em;
+}
+
+.grid.gap {
+    --grid-gap: 0.4em;
+}
+
 
 
 /*  TABLES  */
