--- a/christiansen.nikoline/css/storetheme.css
+++ b/christiansen.nikoline/css/storetheme.css
@@ -3,7 +3,21 @@
 }
 
 body {
-	background-color: var(--color-offwhite);
+	padding-bottom: 10em;
+	background-color: #28361838;
+}
+
+.favorite label {
+	transition: all 0.3s;
+	display: inline-block;
+	transform: scale(1,1);
+	color: var(--color-neutral-medium);
+}
+
+.favorite input:checked + label {
+	color: red;
+	transform: scale(1.5,1.5);
+
 }
 
 @media (max-width: 800px) {
@@ -42,3 +56,5 @@ body {
 		padding-left: 0;
 	}
 }
+
+
