--- a/christiansen.nikoline/lib/css/styleguide.css
+++ b/christiansen.nikoline/lib/css/styleguide.css
@@ -1,5 +1,5 @@
 
-/* CSS RESET */
+															/* CSS RESET */
 
 *, *::after, *::befroe {
 	box-sizing: border-box;
@@ -21,8 +21,13 @@
 	--spacing: 1rem;
 
 	--font-serif: Georgia, "Times New Roman", sans-serif;
-	--font-sans: Helvetica, Arial, sans-serif;;
+	--font-sans: "Source Sans Pro", sans-serif;
 }
+
+															/* MY STYLEGUIDE */
+
+@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,400;0,600;1,400&display=swap');
+
 
 body {
 	margin: 0;
@@ -36,15 +41,16 @@ h3,
 h4,
 h5,
 h6 {
-	font-family:var(--font-serif);
+	font-family:var(--font-sans);
 	color: var(--color-neutral-dark);
+	font-weight: 800;
 }
 
 a {
-	color: inherit;
-	font-weight: bold;
 	text-decoration: none;
 	color: var(--color-neutral-dark);
+	font-family: 'Source Sans Pro', sans-serif;
+	font-weight: 300;
 }
 
 a:hover {
@@ -55,12 +61,14 @@ a:hover {
 
 p {
 	color: var(--color-neutral-dark);
+	font-family: 'Source Sans Pro', sans-serif;
+	font-weight: 200;
 }
 
 
 
 
-/* LAYOUT CLASSES */
+															/* LAYOUT CLASSES */
 
 .container {
 	max-width: 900px;
@@ -82,14 +90,17 @@ p {
 .flex-justify { justify-content: center; }
 
 
-/* SMALL CLASS */
+															/* SMALL CLASS */
 
 .media-image {
 	max-width: 100%;
 	vertical-align: text-bottom;
 }
 
-/* COMPONENT CLASSES */
+.hidden { display: none; }
+
+
+															/* COMPONENT CLASSES */
 
 .nav ul {
 	list-style-type: none;
@@ -244,7 +255,7 @@ p {
 }
 
 
-/* REMEMBER GOOD NAMING - NO "SQUARE", "CIRCLE" etc. */
+															/* GOOD NAMING - NO "SQUARE", "CIRCLE" etc. */
 
 .view-window {
 	height: 100vh;
@@ -257,7 +268,7 @@ p {
 
 
 
-/* ARTICLE */
+															/* ARTICLE */
 
 article {
 	margin: 10px;
@@ -278,7 +289,7 @@ article {
 }
 
 
-/* TABLES */
+															/* TABLES */
 .table {
 	width: 100%;
 	border-collapse: collapse;
@@ -313,7 +324,7 @@ article {
 
 }
 
-/* FIGURE */
+															/* FIGURE */
 .figure {
 	margin: 0;
 }
@@ -329,12 +340,137 @@ article {
 }
 
 
-/* ADD TO STORETHEME WHEN PROBLEM IS FIXED */
+
+															/* FORMS */
+
+.form-select>select,
+.hotdog input,
+.hotdog,
+.form-input,
+.form-button,
+.form-item {
+    display: inline-block;
+    background-color: transparent;
+    border-width: 0;
+    font-size: inherit;
+ 	-webkit-appearance: none;
+    color: inherit;
+ 	width: 100%;
+ 	outline: 0;
+ 	box-sizing: border-box;
+    }
+
+.form-input { 
+	border-bottom: 1px solid var(--color-neutral-light); 
+    padding: 0.5em 1em;
+    }
+
+
+.form-input:focus { border-bottom-color: var(--color-main-light); } 
+
+ .form-label {
+ 	font-size: 0.8em;
+    color: var(--color-neutral-medium);
+    display: block;
+    width: 100%;
+  }
+
+  .form-control { margin: 1em 0; }
+
+
+															/* BUTTONS */
+
+.form-button {
+    background-color: var(--color-neutral-light);
+ 	border-radius: 0.2em;
+ 	cursor: pointer;
+ 	text-align: center;
+    padding: 0.5em 1em;
+    }
+
+   .form-button:active {
+   	background-color: var(--color-neutral-medium);
+   }
+
+   .form-button:hover {
+   	text-decoration: none;
+   	background-color: var(--color-main-dark);
+   	color: var(--color-white);
+   }
+
+.hotdog {
+	background-color: var(--color-neutral-light);
+	border-radius: 2em;
+	padding: 0.5em 1.5em;
+	display: flex;
+}
+
+.hotdog.dark {
+	background-color: var(--color-neutral-dark);
+	color: white;
+}
+
+.hotdog.light {
+	background-color: var(--color-white);
+	color: var(--color-black);
+}
+
+.form-select>select {
+	padding: 0.7em 1.5em;
+	background-color: var(--color-neutral-light);
+	border-radius: 0.3em;
+	display: block;
+	cursor: pointer;;
+}
+
+.form-select {
+	position: relative;
+}
+
+.form-select::after {
+	content: '▾';
+	font-family: arial,sans-serif;
+	font-size: 1.2em;
+	position: absolute;
+	top: 50%;
+	right: 0.3em;
+	transform: translateY(-50%);
+	pointer-events: none;
+	color: var(--color-neutral-dark);
+}
+
+															/* TOGGLE */
+.toggle label {
+	font-size: 1.3em;
+	display: inline-block;
+	width: 2em;
+	height: 1em;
+	border: 0.1em solid var(--color-neutral-medium);
+	border-radius: 1em;
+	position: relative;
+}
+
+.toggle label::after {
+	content:'';
+	display: inline-block;
+	width: 1em;
+	height: 1em;
+	border-radius: 1em;
+	position: absolute;
+	background-color: var(--color-neutral-light);
+	transition: all 0.3s;
+}
+
+.toggle input:checked + label::after {
+	transform: translateX(1em);	
+}
+
+															/* PUT IN STORETHEME.CSS WHEN ISSUE FIXED */
 
 .figure.product {
 	border-radius: 0.5em;
 	box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-/*	overflow: hidden; */
+	overflow: hidden; 
 }
 
 .product-overlay {
@@ -383,29 +519,5 @@ article {
 
 .product-overlay:hover img  {
 	transform: scale(1.4,1.4);
-}
-
-
-/* MY STYLEGUIDE */
-
-@import url('https://fonts.googleapis.com/css2?family=Source+Sans+Pro:ital,wght@0,300;0,400;0,600;1,400&display=swap');
-
-.styleguidebody {
-	background-color: #28361838;
-}
-
-.styleguidebody p {
-	font-family: 'Source Sans Pro', sans-serif;
-	font-weight: 200;
-}
-
-.styleguidebody a {
-	font-family: 'Source Sans Pro', sans-serif;
-	font-weight: 300;
-} 
-
-.styleguidebody h1, h2, h3, h4, h5, h6 {
-	font-family: 'Source Sans Pro', sans-serif;
-	font-weight: 800;
 }
 
