--- a/Kardan_Kosar/css/storetheme.css
+++ b/Kardan_Kosar/css/storetheme.css
@@ -29,12 +29,29 @@
     --color-secondary-medium: #f1dbba;
     --color-secondary-dark: #e8ba97;
 
-    --color-overlay:  #818c7f99;
+    --color-overlay:  #818c7fCC;
+    --color-box-shadow:  #818c7fCC;
 }
 body {
 	background-color: var(--color-primary-light);
 	font-family: var(--font-body-text) ;
 	color: var(--color-primary-dark);
+	/*padding-bottom: 4em;*/
+}
+
+
+
+/* FAVOURITE HEART */
+
+.favourite label {
+	transition: all 0.3s ease-in-out;
+	display: inline-block;
+	color: var(--color-neutral-medium);
+	transform: scale(1);
+}
+.favourite input:checked + label {
+	color: red;
+	transform: scale(1.3);
 }
 
 h1,h2,h3,h4,h5,h6{
@@ -128,6 +145,22 @@ h1,h2,h3,h4,h5,h6{
  	transform: translateY(0);   
 }
 
+/* Form Label */
+.form-label-animated {
+    font-size: 1.2em;
+    color: var(--color-neutral-dark);
+    display: block;
+    width: 100%;
+    position: relative;
+    top: -2em;
+    transition: all 0.3s ease-in-out;
+    cursor: text;
+}
+.form-label-motion {
+    font-size: 0.8em;
+    top: -4.5em;
+}
+
 
 /* Footer */
 footer{
@@ -136,3 +169,5 @@ footer{
     line-height: var(--header-height);
 	text-align: center;
 }
+
+
