--- a/chiang.eileen/css/storetheme.css
+++ b/chiang.eileen/css/storetheme.css
@@ -1,11 +1,11 @@
 
 :root {
 	--color-offwhite: #f4f4f4;
-	--color-lightyellow: #FED734;
+	--color-lightyellow: #fcccdb;
 
 	--color-main-light: #e4cbf1;
 	--color-main-medium: #d89dfa;
-	--color-main-dark: #fa4c31;
+	--color-main-dark: #38029e;
 
 	--color-neutral-light: #ebcafc;
 	--color-neutral-medium: #deaafa;
