--- a/zheng.yushi/lib/css/styleguide.css
+++ b/zheng.yushi/lib/css/styleguide.css
@@ -82,7 +82,9 @@ a:hover {
 	max-width: 100%;
 	vertical-align: text-bottom;
 }
-
+.hidden {
+	display: none;
+}
 
 /* COMPONENT CLASSES */
 
@@ -293,15 +295,117 @@ a:hover {
 
 
 /*FORMS*/
-
-.form-input {
-    display: inline-block;
+.form-control {
+	margin: 1em 0;
+}
+.form-select>select,
+.hotdog input,
+.hotdog,
+.form-button,
+.form-input,
+.form-item {
+ 	display: inline-block;
     background-color: transparent;
     border-width: 0;
-    padding: 0.2em 0.5em;
     font-size: inherit;
     -webkit-appearance: none;
     color: inherit;
-    border-bottom: 1px solid var(--color-neutral-medium);
+    width: 100%;
     outline: 0;
+}
+.form-input {
+    border-bottom: 1px solid var(--color-neutral-light);
+    padding: 0.5em 1em;
+}
+
+.form-input:focus {
+	border-bottom-color: var(--color-main-light);
+}
+.form-label {
+    font-size: 0.8em;
+    color: var(--color-neutral-medium);
+    display: block;
+    width: 100%;
+}
+
+.form-button {
+    background-color: var(--color-neutral-light);
+    border-radius: 0.2em;
+    padding: 0.5em 1em;
+    cursor: pointer;
+    text-align: center;
+}
+.form-button:hover {
+	text-decoration: none;
+}
+.form-button:active {
+	background-color: var(--color-main-light);
+}
+
+
+
+
+.hotdog {
+	background-color: var(--color-neutral-light);
+	border-radius: 2em;
+	padding: 0.5em 1.5em;
+	display: flex;
+}
+.hotdog.dark {
+	background-color: var(--color-neutral-dark);
+	color: var(--color-neutral-light);
+}
+.hotdog.light {
+	background-color: var(--color-white);
+	color: var(--color-black);
+}
+
+.form-select>select {
+	padding: 0.5em 1.3em;
+	background-color: var(--color-neutral-light);
+	border-radius: 0.3em;
+	cursor: pointer;
+}
+.form-select {
+	position: relative;
+}
+
+.form-select::after {
+	content: '▾';
+	font-family: arial,sans-serif;
+	font-size: 0.8em;
+	position: absolute;
+	top: 50%;
+	right: 0.2em;
+	transform: translateY(-50%);
+	pointer-events: none;
+	color: var(--color-neutral-medium);
+}
+
+
+
+
+/*Toggle*/
+.toggle label {
+	font-size: 1.3em;
+	display: inline-block;
+	width: 2em;
+	height: 1em;
+	border: 0.1em solid var(--color-neutral-medium);
+	background-color: var(--color-neutral-light);
+	border-radius: 1em;
+	position: relative;
+}
+.toggle label::after {
+	content: '';
+	display: inline-block;
+	width: 0.8em;
+	height: 0.8em;
+	border-radius: 1em;
+	position: absolute;
+	background-color: var(--color-neutral-medium);
+	transition: all 0.3s;
+}
+.toggle label:checked + label::after {
+	transform: translateX(1em);
 }
