--- a/chang.karen/midterm/midtermstyleguide.css
+++ b/chang.karen/midterm/midtermstyleguide.css
@@ -502,7 +502,9 @@ body {
 /*  FORMS  */
 
 #form-card {
+    margin-right: 10px;
     padding-bottom: 10px;
+    flex: 2;
 }
 
 .form-control {
@@ -980,6 +982,28 @@ body {
     flex-direction: column;
 }
 
+#cart_separater {
+    display: flex;
+    margin: 0;
+    padding: 0;
+}
+
+#placeorder_separater {
+    display: flex;
+    margin: 0;
+    padding: 0;
+}
+
+.cart-card{
+    margin: 5px;
+    flex: 1;
+}
+
+.checkout-block {
+    display: flex;
+    flex-direction: column;
+}
+
 .cart_bg {
     height: 100vh;
     width: 100vw;
@@ -995,17 +1019,25 @@ body {
 }
 
 #place_order_container a {
+    margin-top: 10px;
+    padding: 0 5px;
     font-family: futura-pt, sans-serif;
     font-weight: 400;
+    width: 100%;
 }
 
 #place_order_container button {
     transition: all 0.3s;
 }
 
+#cart_container a:hover {
+    text-decoration: underline;
+}
+
 
 #checkout {
-    width: 160px;
+    margin-top: 0;
+    width: 100%;
     background-color: var(--color-neutral-dark);
     color: #fff;
 }
@@ -1036,6 +1068,9 @@ body {
 
 #checkout_container h1 {
     font-family: josefin-slab, serif;
+    font-size: 1.5rem;
+    margin-left: 5px;
+    margin-bottom: 0;
 }
 
 #checkout_container a {
@@ -1044,6 +1079,10 @@ body {
     font-size: 1rem;
     margin-top: 20px;
     margin-bottom: 0;
+}
+
+.placeorder {
+    flex: 1;
 }
 
 /* CONFIRMATION */
@@ -1171,8 +1210,19 @@ body {
         line-height: 0.9rem;
     }
     .content {
-    padding: 5px;
-    color: #000;
+        padding: 5px;
+        color: #000;
+    }
+    #cart_separater {
+        display: flex;
+        flex-direction: column;
+    }
+    #placeorder_separater {
+        display: flex;
+        flex-direction: column;
+    }
+    #total-card{
+        width: 97.5%;
     }
 }
 
@@ -1194,6 +1244,17 @@ body {
         font-size: 0.6rem;
         line-height: 0.9rem;
     }
+    #cart_separater {
+        display: flex;
+        flex-direction: column;
+    }
+    #placeorder_separater {
+        display: flex;
+        flex-direction: column;
+    }
+    #total-card{
+        width: 97%;
+    }
 }
 
 @media(max-width: 280px){
@@ -1205,6 +1266,17 @@ body {
         padding: 0;
         font-size: 0.8rem;
         line-height: 0.9rem;
+    }
+    #cart_separater {
+        display: flex;
+        flex-direction: column;
+    }
+    #placeorder_separater {
+        display: flex;
+        flex-direction: column;
+    }
+    #total-card{
+        width: 97%;
     }
 }
 
