--- a/Kardan_Kosar/css/storetheme.css
+++ b/Kardan_Kosar/css/storetheme.css
@@ -6,8 +6,15 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300&display=swap');
 
 
+
+
+
+
 /* BRAND STYLE */
+
 :root{
+	--color-black:  #000;
+    --color-white:  #fff;
 	--color-offwhite: #F3F5F6;
 
 	--font-heading: 'Roboto', sans-serif;
@@ -36,12 +43,242 @@
     --color-overlay:  #003A6DCC;
     --color-box-shadow:  #818c7fCC;
 }
+
+
+
+
+
+/* GENERAL SETTING */
 body {
+	width: 100vw;
+	min-height: 100vh;
 	background-color: var(--color-offwhite);
 	font-family: var(--font-body-text) ;
 	color: var(--color-primary-dark);
-	/*padding-bottom: 4em;*/
 }
+
+h1,h2,h3,h4,h5,h6{
+	font-family: var(--font-heading);
+	color: var(--color-primary-dark);
+}
+
+ul, ol, li {
+	list-style: none;
+	padding: 0;
+	margin: 0;
+}
+
+a: hover {
+	text-decoration: none;
+}
+
+.bgImage {
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+
+/* NAVIGATION */
+#navigation {
+	width: 100vw;
+	height: 80px;
+	background-color: var(--color);
+	border-bottom: 2px solid var(--color-primary-dark);
+}
+
+#navigation > nav,
+#burger > a > img,
+#logo > a > img {
+	width: 100%;
+	height: 100%;
+}
+
+#burger, 
+#logo, 
+#twitter,
+#instagram,
+#facebook
+ {
+	width: 50px;
+	height: 50px;
+	border: 1px solid var(--color-primary-dark);
+}
+
+#burger {
+	margin-right: 10px;
+}
+
+#burger img {
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+#logo img {
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+}
+
+
+
+
+
+/* HERO IMAGE */
+main {
+	width: 100vw;
+	flex-direction: row;
+}
+
+#hero, #feature, #mission, #footer {
+	width: 65vw;
+	height: auto;
+}
+
+#hero {
+	height: 45vh;
+	background-position: center;
+	background-image: url(../img/MedicineBottle.png);
+	background-size: cover;
+}
+
+
+
+
+
+/* FEATURE PRODUCTS */
+
+#feature {
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
+
+
+
+
+
+/* MISSION SECTION */
+#mission {
+	background-color: var(--color-primary-dark);
+	color: var(--color-white);
+	margin-bottom: 20px;
+}
+
+#mission h2 {
+	color: var(--color-white);
+}
+
+
+
+
+
+
+
+
+
+.navbar {
+    background-color: var(--color);
+    color: var(--color-neutral-light);
+    line-height: var(--header-height);
+}
+    .navbar h1 {
+        font-size: 1em;
+        margin: 0;
+        font-family: var(--font-sans);
+    }
+    .navbar a {
+        padding: 0 0.5em;
+    }
+ul, ol, li {
+	list-style: none;
+}
+
+
+
+/* FOOOTER */
+#footer{
+	width: 100vw;
+	height: auto;
+	background-color: var(--color-white);
+    color: var(--color-primary-dark);
+    line-height: var(--header-height);
+    border-top: 2px solid var(--color-primary-dark);
+    margin: 0;
+    padding: 0;
+}
+
+#footer > ul {
+	margin: 0;
+	width: 65vw;
+	height: 90px;
+}
+#footer > ul:first-child {
+margin-top: 5px;
+	border-bottom: 1px solid var(--color-primary-dark);
+}
+#footer > ul > li:first-child {
+	width: 20vw;
+	height: 100%;
+}
+
+#footer > ul > li:nth-child(2) {
+	width: 50vw;
+	height: 100%;
+}
+
+#footer > ul > li > form, 
+#footer > ul > li > form > ul {
+	width: 100%;
+	height: 100%;
+}
+
+#footer > ul > li > form > ul > li:first-child {
+	width: 50%;
+}
+#footer > ul > li > form > ul > li:nth-child(2) {
+	width: 20%;
+}
+
+#footerLogo {
+	width: 150px;
+	height: 50px;
+	border: 1px solid var(--color-primary-dark);
+}
+
+#twitter {
+	/*background-image: url(../img/logo.png);*/
+}
+#instagram {
+	/*background-image: url(../img/Family.png);*/
+}
+#facebook {
+	/*background-image: url(../img/Family.png);*/
+}
+#footerLogo {
+	/*background-image: url(../img/Family.png);*/
+}
+
+@media screen only and (min-width: 550px){
+	flex-wrap: wrap;
+}
+
+/* NEED TO WORK ON THE MEDIA QUARY FOR THE FOOTER ON SMALL SCREEN DEVICE */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
@@ -56,11 +293,6 @@ body {
 .favourite input:checked + label {
 	color: var(--color-primary-dark);
 	transform: scale(1.3);
-}
-
-h1,h2,h3,h4,h5,h6{
-	font-family: var(--font-heading);
-	color: var(--color-primary-dark);
 }
 
 @media (max-width:  400px) {
@@ -80,6 +312,7 @@ h1,h2,h3,h4,h5,h6{
 		padding-left: 0.5em;
 	}
 }
+
 
 /* NavBar */
 #test .nav-matrial a {
@@ -162,16 +395,10 @@ h1,h2,h3,h4,h5,h6{
 }
 .form-label-motion {
     font-size: 0.8em;
-    top: -4.5em;
+    top: -5.7em;
 }
-
-
-/* Footer */
-footer{
-    background-color: var(--color-primary-dark);
-    color: var(--color-neutral-light);
-    line-height: var(--header-height);
-	text-align: center;
+input[type="text"]
+{
+    font-size:1.2em;
+    padding: 0;
 }
-
-
